Creado mediante Colaboratory

--- a/03_Series_e_Indexación_y_selección_de_datos.ipynb
+++ b/03_Series_e_Indexación_y_selección_de_datos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03- Series e Indexación y selección de datos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPF0ORY3lWlhJQRrR4mEtZ6",
+      "authorship_tag": "ABX9TyNTZ8BqV4m386FdcSAj4jyb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -616,13 +616,44 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import pandas as pd"
       ],
       "metadata": {
         "id": "PnjXvNBiEh-f"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.Series([10, 9, 8, 7,6 ])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eovx0aZgHc5o",
+        "outputId": "cca0e2cc-5da3-42df-88d1-2ea82c745c8a"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    10\n",
+              "1     9\n",
+              "2     8\n",
+              "3     7\n",
+              "4     6\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     }
   ]
 }
